Feat/easy command unregister (#2041)
* turtle helmet's max stack size should be 1

* turtle helmet: extends ItemArmor

* add: deletePlayerData method

* fix: checkForTickable shouldnt be true by default

* Fix: Resource pack encoding & refactor comments

* unregister method for easy command unregistry

Added a new helper method for easy unregister a command

* -

* -

* changed

* changed

* -

* -

---------

Co-authored-by: staticius <ryunaes@gmail.com>